Fixed: Low text contrast

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 
 body {
     /* background-color: hsl(0, 0%, 5%); */
+    color: white;
     background: url(bg.jpg);
     display: flex;
     flex-direction: column;
@@ -73,6 +74,7 @@ a.grid {
     width: 100%;
     height: 100%;
     text-decoration: none;
+    color: cyan;
 }
 
 a.grid:hover {
